--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,93 @@
+---
+import KeepScrolling from "@/assets/keep-scrolling.svg"
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Landing GTA VI by @midudev</title>
+  </head>
+  <body>
+    <slot />
+    <KeepScrolling
+      class="fixed bottom-3 right-0 left-0 mx-auto text-pink-300 drop-shadow-2xl animate-bounce-pulse"
+    />
+  </body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+<style is:global>
+  @import "tailwindcss";
+
+  @theme {
+    --font-sans: "GTA", system-ui, sans-serif;
+    --font-narrow: "GTANarrow", system-ui, sans-serif;
+
+    --animate-bounce-pulse: bounce-pulse 2s ease-in-out infinite;
+  }
+
+  @keyframes bounce-pulse {
+    0% {
+      transform: translateY(0);
+      scale: 0.8;
+      opacity: 0.8;
+    }
+
+    50% {
+      transform: translateY(-5px);
+      opacity: 1;
+      scale: 1;
+    }
+
+    100% {
+      transform: translateY(0);
+      scale: 0.8;
+      opacity: 0.8;
+    }
+  }
+
+  html,
+  body {
+    background: #111;
+    height: 300vh;
+    overflow-x: hidden;
+    overscroll-behavior: none;
+    color: white;
+    margin: 0;
+    width: 100%;
+  }
+
+  @font-face {
+    font-family: GTA;
+    src: url("/fonts/gta-regular.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: GTA;
+    src: url("/fonts/gta-bold.woff") format("woff");
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: GTA;
+    src: url("/fonts/gta-semibold.woff") format("woff");
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: GTANarrow;
+    src: url("/fonts/gta-narrow.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
 </style>
