feat: modify initial landing assets + config

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ import KeepScrolling from "@/assets/keep-scrolling.svg"
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>Landing GTA VI by @midudev</title>
+    <title>Landing AC 2</title>
   </head>
   <body>
     <slot />
